--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "devDependencies": {
     "node-sass": "^4.9.4",
     "sass-loader": "^7.1.0",
-    "vuepress": "^0.14.4"
+    "vuepress": "0.14.4"
   }
 }
